--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all .2s linear; 
+  -o-transition: all .2s linear; 
+  -moz-transition: all .2s linear; 
+  -webkit-transition: all .2s linear;
   transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 img{
