--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,67 @@
-.scrollbar::-webkit-scrollbar{
-    width: 0.375rem;
-    height: 0.375rem;
-    background-color: transparent;
+.scrollbar::-webkit-scrollbar {
+  width: 0.375rem;
+  height: 0.375rem;
+  background-color: transparent;
 }
-.scrollbar::-webkit-scrollbar-thumb{
-    border-radius: 0.25rem!important;
-    --tw-bg-opacity: 1!important;
-    background-color: rgb(203 213 225/var(--tw-bg-opacity))!important;
+.scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 0.25rem !important;
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity)) !important;
 }
-.dark .scrollbar::-webkit-scrollbar-thumb{
-    background-color: rgb(100 116 139/.5)!important;
-}
-
-.scrollbar::-webkit-scrollbar-track{
-    --tw-bg-opacity: 1!important;
-    background-color: rgb(241 245 249/var(--tw-bg-opacity))!important;
-    border-radius: 0.25rem!important;
-}
-.dark .scrollbar::-webkit-scrollbar-track{
-    background-color: rgb(100 116 139/.16)!important;;
-}
-.blue-bg{
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    z-index: 1;
-    opacity: 0;
-    right: 0;
-    bottom: 0;
-background: linear-gradient(150deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+.dark .scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgb(100 116 139/0.5) !important;
 }
 
-.list-checkbox{
-    position: absolute;
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
+.scrollbar::-webkit-scrollbar-track {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity)) !important;
+  border-radius: 0.25rem !important;
 }
-.list-checkbox:checked ~ .blue-bg{
-   opacity: 1;
+.dark .scrollbar::-webkit-scrollbar-track {
+  background-color: rgb(100 116 139/0.16) !important;
 }
-.blue-outline{
-    outline-color: hsl(192, 100%, 67%);
+.blue-bg {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(150deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
 }
-.dark .blue-outline{
-    outline-color: hsl(280, 87%, 65%);
+
+.list-checkbox {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
 }
-#strike{
-    text-decoration-line: line-through;
-    color: hsl(236, 9%, 61%);
-    opacity: 0.7;
+.list-checkbox:checked ~ .blue-bg {
+  opacity: 1;
 }
-.dark #strike{
-    color: hsl(233, 14%, 35%);
-    opacity: 1;
+.blue-outline {
+  outline-color: hsl(192, 100%, 67%);
 }
-.filterClicked{
-    color: hsl(220, 98%, 61%);
+.dark .blue-outline {
+  outline-color: hsl(280, 87%, 65%);
 }
-.dark .filterClicked{
-    color: hsl(220, 98%, 61%);
+#strike {
+  text-decoration-line: line-through;
+  color: hsl(236, 9%, 61%);
+  opacity: 0.7;
+}
+.dark #strike {
+  color: hsl(233, 14%, 35%);
+  opacity: 1;
+}
+.filterClicked {
+  color: hsl(220, 98%, 61%);
+}
+.dark .filterClicked {
+  color: hsl(220, 98%, 61%);
 }
 /* @media screen and (min-width: 640px) {
     .list-parent:hover #cross{
@@ -69,61 +69,63 @@ background: linear-gradient(150deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
     }
 } */
 
-  li {
-    position: relative;
-  }
+li {
+  position: relative;
+}
 
-  .light header{
-    height: 200px;
-	width: 100%;
-	background-image: url('./images/bg-mobile-light.jpg');
-	background-size: cover;
-	background-position: center;
-  }
-  .dark header{
-    height: 200px;
-	width: 100%;
-	background-image: url('./images/bg-mobile-dark.jpg');
-	background-size: cover;
-	background-position: center;
-  }
-  .todo_main{
-    margin-top: -9.5rem;
-    padding: 0 24px;
-  }
-  .main_heading{
-    font-size: 1.8rem;
-    margin: 0px;
-    padding: 0px;
-    text-transform: uppercase;
-    letter-spacing: 8px;
-    font-size: 1.8rem;
-    transform: translateY(4px);
-  }
-  @media screen and (min-width:23.43rem) {
-    .todo_main{
-        margin-top: -14rem;
+.light header {
+  height: 200px;
+  width: 100%;
+  background-image: url("./images/bg-mobile-light.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.dark header {
+  height: 200px;
+  width: 100%;
+  background-image: url("./images/bg-mobile-dark.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.todo_main {
+  margin-top: -9.5rem;
+  padding: 0 24px;
+}
+.main_heading {
+  font-size: 1.8rem;
+  margin: 0px;
+  padding: 0px;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+  font-size: 1.8rem;
+  transform: translateY(4px);
+}
+@media screen and (min-width: 23.43rem) {
+  .todo_main {
+    margin-top: -14rem;
     padding: 0 24px;
     max-width: 35.75rem;
-    }
-    .main_heading{
-        font-size: 2.5rem;
-    }
   }
-  @media screen and (min-width:23.43rem){
-    .light header{
-        height: 300px;
-	width: 100%;
-	background-image: url('./images/bg-desktop-light.jpg');
-	background-size: cover;
-	background-position: center;
-    }
+  .main_heading {
+    font-size: 2.5rem;
+  }
+}
+@media screen and (min-width: 23.43rem) {
+  .light header {
+    height: 300px;
+    width: 100%;
+    background-image: url("./images/bg-desktop-light.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
 
-    .dark header{
-        height: 300px;
-        width: 100%;
-        background-image: url('./images/bg-desktop-dark.jpg');
-        background-size: cover;
-        background-position: center;
-      }
+  .dark header {
+    height: 300px;
+    width: 100%;
+    background-image: url("./images/bg-desktop-dark.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
   }
+}
