--- a/src/index.css
+++ b/src/index.css
@@ -2,47 +2,58 @@
 @tailwind components;
 @tailwind utilities;
 
-:root{
+:root {
   --bright-blue: hsl(220, 98%, 61%);
-  --check-background: linear-gradient(150deg, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+  --check-background: linear-gradient(
+    150deg,
+    hsl(192, 100%, 67%),
+    hsl(280, 87%, 65%)
+  );
 
   /* Light Theme */
-  --very-light-gray:  hsl(0, 0%, 98%);
+  --very-light-gray: hsl(0, 0%, 98%);
   --very-light-grayish-blue: hsl(236, 33%, 92%);
   --light-grayish-blue: hsl(233, 11%, 84%);
   --dark-grayish-blue: hsl(236, 9%, 61%);
-  --very-dark-grayish-blue:  hsl(235, 19%, 35%);
+  --very-dark-grayish-blue: hsl(235, 19%, 35%);
 
   /* Dark Theme  */
 
   --very-dark-blue: hsl(235, 21%, 11%);
   --very-dark-desaturated-blue: hsl(235, 24%, 19%);
-  --light-grayish-blue:  hsl(234, 39%, 85%);
+  --light-grayish-blue: hsl(234, 39%, 85%);
   --hover-light-grayish-blue: hsl(236, 33%, 92%);
   --dark-grayish-blue: hsl(234, 11%, 52%);
   --very-dark-grayish-blue: hsl(233, 14%, 35%);
   --very-dark-grayish-blue: hsl(237, 14%, 26%);
 }
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
-img{
+
+img {
   width: 100%;
   height: auto;
   display: block;
 }
 body {
-  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
+  position: relative;
 }
-html, body, #root,.dark,.light{
+html,
+body,
+#root,
+.dark,
+.light {
+  width: 100%;
   height: 100%;
 }
-#root{
+#root {
   isolation: isolate;
 }
